--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,6 @@ yarn-error.log
 /.vscode
 /.zed
 /.junie
-./public/css/filament
-./public/fonts/filament
-./public/js/filament
+/public/css/filament/
+/public/js/filament/
+/public/fonts/filament/
