--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,12 @@
-APP_NAME=Laravel
+APP_NAME=Conferenze.Tech
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
-APP_LOCALE=en
+APP_LOCALE=it
 APP_FALLBACK_LOCALE=en
-APP_FAKER_LOCALE=en_US
+APP_FAKER_LOCALE=it_IT
 
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
