--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,12 +1,18 @@
 includes:
     - ./vendor/larastan/larastan/extension.neon
+
 parameters:
+
     paths:
-	    - app
-    # The level 9 is the highest level
+        - app/
+
+    # Level 9 is the highest level
     level: 5
-    ignoreErrors:
-	    - '#PHPDoc tag @var#'
-    excludePaths:
-	    - ./*/*/FileToBeExcluded.php
-    checkMissingIterableValueType: false
+
+#    ignoreErrors:
+#        - '#PHPDoc tag @var#'
+#
+#    excludePaths:
+#        - ./*/*/FileToBeExcluded.php
+#
+#    checkMissingIterableValueType: false
